--- a/de.html
+++ b/de.html
@@ -288,34 +288,20 @@
             <span style="display: block; height: 6px;"></span>
             <li><a href="#"> <span class='blue'>Forscher</span> :: <span class='blue'>Ingenieur</span> :: <span
                   class='blue'>Analyst</span></a></li>
-            <p>____</p>
-            <!--<li><a href="#whoami">Who am I?</a></li>-->
-            <li><a href="#education">Ausbildung</a></li>
-            <!--<li><a href="#work">Work</a></li>-->
-            <!--<li><a href="#project">Projects</a></li>-->
-            <!--<li><a href="#activities">Activities</a></li>  -->
-            <li><a href="#publications">Publikationen</a></li>
-            <!--<li><a href="#patents">Patente</a></li>  -->
-            <!--<li><a href="#presentations">Konferenzen</a></li>-->
-            <li><a href="#awards">Preise</a></li>
-            <!--<li><a href="#training">Aktivitäten</a></li>-->
-            <!--<li><a href="#fund">Funding</a></li>-->
-            <!--<li><a href="#skills">Kompetenzen</a></li>-->
-            <li><a href="#contact">Kontakt</a></li>
-            <p>____</p>
-            <!-- <li><a href="#services">Services</a></li> -->
-            <!-- <li><a href="#contact">Contact</a></li> -->
-            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
+                  <p>____</p>
+                  <li><a href="de.html"><span style="color: rgb(253, 93, 7);">Biografie ⏴</span></a></li>
+                  <li><a href="de-research.html">Forschung</a></li>
+                  <li><a href="de-resume.html">Lebenslauf</a></li>
+                  <li><a href="de-activities.html">Aktivitäten</a></li>
+                  <li><a href="#contact">Kontakt</a></li>
+                  <p>____</p>
+                  <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                   class='blue'>LinkedIn</span></a></li>
-            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                target="_blank"><span class='blue'>Google Scholar</span></a></li>
-            <!--<li><a href="https://unknown/files/Hong_XU_CV_github.io.pdf" target="_blank" target="_blank"><span class='blue'>CV</span></a></li>-->
-            <!-- <li><a href="http://www.linkedin.com/in/" target="_blank" target="_blank"><span class='blue'>LinkedIn Profile</span></a></li> -->
-            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
+                  <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=de" target="_blank"
+                  target="_blank"><span class='blue'>Google Scholar</span></a></li>
+                  <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
                   tum.de</span></a></li>
-            <p>____</p>
-            <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
-          <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
+                  <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
 
