--- a/fr-research.html
+++ b/fr-research.html
@@ -302,18 +302,16 @@
             <li><a href="#"> <span class='blue'>Chercheur</span> :: <span class='blue'>Ingénieur</span> :: <span
                   class='blue'>Analyste</span></a></li>
                   <p>____</p>
-                  <li><a href="fr.html"><span style="color: rgb(253, 93, 7);">Biographie ⏴</span></a></li>
-                  <li><a href="fr-research.html">Recherche</a></li>
-                  <li><a href="fr-resume.html">Résumé</a></li>
+                  <li><a href="fr.html"><span >Biographie</span></a></li>
+                  <li><a href="fr-research.html"><span style="color: rgb(253, 93, 7);">Recherche ⏴</span></a></li>
+                  <li><a href="#publications">&nbsp;• Publications</a></li>
+                  <li><a href="#patents">&nbsp;• Brevets</a></li>
+                  <li><a href="#presentations">&nbsp;• Conférences</a></li>
+                  <li><a href="#equity-research">&nbsp;• Recherche sur les actions</a></li>
+                  <li><a href="fr-resume.html">CV</a></li>
                   <li><a href="fr-activities.html">Activités</a></li>
-                  <li><a href="#contact">Contact</a></li>
                   <p>____</p>
-                  <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                  class='blue'>LinkedIn</span></a></li>
-                  <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                  target="_blank"><span class='blue'>Google Scholar</span></a></li>
-                  <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
-                  tum.de</span></a></li>
+                  <li><a href="#contact"><span style="couleur : rgb(253, 93, 7);">Contact</span></a></li>
                   <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -404,17 +402,17 @@
           <select id="languages" name="languages"
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="fr.html" select>Français</option>
-            <option value="de.html">Deutsch</option>
-            <option value="en.html">English</option>
-            <option value="es.html">Español</option>
+            <option value="fr-research.html" select>Français</option>
+            <option value="de-research.html">Deutsch</option>
+            <option value="en-research.html">English</option>
+            <option value="es-research.html">Español</option>
             <!---
-            <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
-            <option value="cn.html">中文</option>
-            <option value="jp.html">日本語</option>
-            <option value="kr.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="it-research.html">Italiano</option>
+            <option value="ru-research.html">Русский</option>
+            <option value="cn-research.html">中文</option>
+            <option value="jp-research.html">日本語</option>
+            <option value="kr-research.html">한국어</option>
+            <option value="ar-research.html">اللغة العربية</option>
             --->
           </select>
         </span>
@@ -478,17 +476,17 @@
             <select id="languages" name="languages"
               style="width: 100px; color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="fr.html" select>🇫🇷 Français</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
-              <option value="en.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
+              <option value="fr-research.html" select>🇫🇷 Français</option>
+              <option value="de-research.html">🇩🇪 Deutsch</option>
+              <option value="en-research.html">🇬🇧 English</option>
+              <option value="es-research.html">🇪🇸 Español</option>
               <!---
-              <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="it-research.html">🇮🇹 Italiano</option>
+              <option value="ru-research.html">🇷🇺 Русский</option>
+              <option value="cn-research.html">🇨🇳 中文</option>
+              <option value="jp-research.html">🇯🇵 日本語</option>
+              <option value="kr-research.html">🇰🇷 한국어</option>
+              <option value="ar-research.html">🇸🇦 اللغة العربية</option>
               --->
             </select>
           </span>
