--- a/kr-activities.html
+++ b/kr-activities.html
@@ -404,13 +404,13 @@
             <option value="kr-activities.html" select>한국어</option>
             <option value="jp-activities.html">日本語</option>
             <option value="cn-activities.html">中文</option>
-            <option value="de.html">Deutsch</option>
+            <option value="de-activities.html">Deutsch</option>
             <option value="en-activities.html">English</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
-            <option value="it.html">Italiano</option>
+            <option value="es-activities.html">Español</option>
+            <option value="fr-activities.html">Français</option>
+            <option value="it-activities.html">Italiano</option>
             <option value="ru-activities.html">Русский</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ar-activities.html">اللغة العربية</option>
 
 
           </select>
@@ -480,13 +480,13 @@
               <option value="kr-activities.html" select>🇰🇷 한국어</option>
               <option value="jp-activities.html">🇯🇵 日本語</option>
               <option value="cn-activities.html">🇨🇳 中文</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
+              <option value="de-activities.html">🇩🇪 Deutsch</option>
               <option value="en-activities.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
+              <option value="es-activities.html">🇪🇸 Español</option>
+              <option value="fr-activities.html">🇫🇷 Français</option>
+              <option value="it-activities.html">🇮🇹 Italiano</option>
               <option value="ru-activities.html">🇷🇺 Русский</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-activities.html">🇸🇦 اللغة العربية</option>
 
 
 
