--- a/kr-resume.html
+++ b/kr-resume.html
@@ -371,13 +371,13 @@
             <option value="kr-resume.html" select>한국어</option>
             <option value="jp-resume.html">日本語</option>
             <option value="cn-resume.html">中文</option>
-            <option value="de.html">Deutsch</option>
+            <option value="de-resume.html">Deutsch</option>
             <option value="en-resume.html">English</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
-            <option value="it.html">Italiano</option>
+            <option value="es-resume.html">Español</option>
+            <option value="fr-resume.html">Français</option>
+            <option value="it-resume.html">Italiano</option>
             <option value="ru-resume.html">Русский</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ar-resume.html">اللغة العربية</option>
 
 
           </select>
@@ -447,13 +447,13 @@
               <option value="kr-resume.html" select>🇰🇷 한국어</option>
               <option value="jp-resume.html">🇯🇵 日本語</option>
               <option value="cn-resume.html">🇨🇳 中文</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
+              <option value="de-resume.html">🇩🇪 Deutsch</option>
               <option value="en-resume.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
+              <option value="es-resume.html">🇪🇸 Español</option>
+              <option value="fr-resume.html">🇫🇷 Français</option>
+              <option value="it-resume.html">🇮🇹 Italiano</option>
               <option value="ru-resume.html">🇷🇺 Русский</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-resume.html">🇸🇦 اللغة العربية</option>
 
 
 
