--- a/ar-1p.html
+++ b/ar-1p.html
@@ -285,20 +285,37 @@
             <span style="display: block; height: 6px;"></span>
             <li><a href="#"> <span class='blue'>الباحث</span> :: <span class='blue'>مهندس</span> :: <span
                   class='blue'>المحلل</span></a></li>
-                  <p>____</p>
-                  <li><a href="ar.html"><span style="color: rgb(253, 93, 7);">سيرة شخصية ⏴</span></a></li>
-                  <li><a href="ar-research.html">الأبحاث</a></li>
-                  <li><a href="ar-resume.html">السيرة الذاتية</a></li>
-                  <li><a href="ar-activities.html">الأنشطة</a></li>
-                  <li><a href="#contact">اتصل بي</a></li>
-                  <p>____</p>
-                  <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                  class='blue'>لينكد إن</span></a></li>
-                  <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                  target="_blank"><span class='blue'>معرف جوجل الباحث العلمي</span></a></li>
-                  <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
+            <p>____</p>
+            <!--<li><a href="#whoami">Researcher</a></li>
+        <li><a href="#whoami">Engineer</a></li>
+        <li><a href="#whoami">Analyst</a></li>-->
+            <!--<li><a href="#whoami">Who am I?</a></li>-->
+            <li><a href="#education">تعليم</a></li>
+            <!--<li><a href="#work">Work</a></li>-->
+            <!--<li><a href="#project">Projects</a></li>-->
+            <!--<li><a href="#activities">Activities</a></li>  -->
+            <li><a href="#publications">المنشورات</a></li>
+            <!--<li><a href="#patents">Patents</a></li>  -->
+            <!--<li><a href="#presentations">Conferences</a></li>-->
+            <li><a href="#awards">الجوائز</a></li>
+            <!--<li><a href="#training">Training</a></li>-->
+            <!--<li><a href="#fund">Funding</a></li>-->
+            <!--<li><a href="#skills">Skills</a></li>-->
+            <li><a href="#contact">اتصل بي</a></li>
+            <p>____</p>
+            <!-- <li><a href="#services">Services</a></li> -->
+            <!-- <li><a href="#contact">Contact</a></li> -->
+            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
+                  class='blue'>ينكدين</span></a></li>
+            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
+                target="_blank"><span class='blue'>منحة جوجل</span></a></li>
+            <!--<li><a href="https://unknown/files/Hong_XU_CV_github.io.pdf" target="_blank" target="_blank"><span class='blue'>CV</span></a></li>-->
+            <!-- <li><a href="http://www.linkedin.com/in/" target="_blank" target="_blank"><span class='blue'>LinkedIn Profile</span></a></li> -->
+            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
                   tum.de</span></a></li>
-                  <p>____</p>
+            <p>____</p>
+            <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
+          <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
             <p></p>
             <img src="images/logo.png" width="45" />
 
