--- a/ar-resume.html
+++ b/ar-resume.html
@@ -286,18 +286,16 @@
             <li><a href="#"> <span class='blue'>الباحث</span> :: <span class='blue'>مهندس</span> :: <span
                   class='blue'>المحلل</span></a></li>
                   <p>____</p>
-                  <li><a href="ar.html"><span style="color: rgb(253, 93, 7);">سيرة شخصية ⏴</span></a></li>
+                  <li><a href="ar.html"><span>سيرة شخصية</span></a></li>
                   <li><a href="ar-research.html">الأبحاث</a></li>
-                  <li><a href="ar-resume.html">السيرة الذاتية</a></li>
+                  <li><a href="ar-resume.html"><span style="color: rgb(253, 93, 7);">السيرة الذاتية ⏴</span></a></li>
+                  <li><a href="#education">&nbsp;• التعليم</a></li>
+                  <li><a href="#academic-experience">&nbsp;• أكاديمي</a></li>
+                  <li><a href="#industrial-experience">&nbsp;• صناعي</a></li>
+                  <li><a href="#awards">&nbsp;• الجوائز</a></li>
                   <li><a href="ar-activities.html">الأنشطة</a></li>
-                  <li><a href="#contact">اتصل بي</a></li>
                   <p>____</p>
-                  <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                  class='blue'>لينكد إن</span></a></li>
-                  <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                  target="_blank"><span class='blue'>معرف جوجل الباحث العلمي</span></a></li>
-                  <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
-                  tum.de</span></a></li>
+                  <li><a href="#contact"><span style="color: rgb(253, 93, 7);">اتصل بي</span></a></li>
                   <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -383,16 +381,16 @@
             <select id="languages" name="languages"
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="ar.html" selected>اللغة العربية</option>
-            <option value="en.html">English</option>
-            <option value="de.html">Deutsch</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
-            <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
-            <option value="cn.html">中文</option>
-            <option value="jp.html">日本語</option>
-            <option value="kr.html">한국어</option>
+            <option value="ar-resume.html" selected>اللغة العربية</option>
+            <option value="en-resume.html">English</option>
+            <option value="de-resume.html">Deutsch</option>
+            <option value="es-resume.html">Español</option>
+            <option value="fr-resume.html">Français</option>
+            <option value="it-resume.html">Italiano</option>
+            <option value="ru-resume.html">Русский</option>
+            <option value="cn-resume.html">中文</option>
+            <option value="jp-resume.html">日本語</option>
+            <option value="kr-resume.html">한국어</option>
           </select>
           <img src="images/flag_sa.png" alt="flag" style="height:17px;display:inline-block;top:4px;position:relative;">
           <img src="images/flag_uae.png" alt="flag" style="height:17px;display:inline-block;top:4px;position:relative;">
@@ -460,16 +458,16 @@
             <select id="languages" name="languages"
               style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="ar.html" select>🇸🇦 اللغة العربية</option>
-              <option value="en.html">🇬🇧 English</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
+              <option value="ar-resume.html" select>🇸🇦 اللغة العربية</option>
+              <option value="en-resume.html">🇬🇧 English</option>
+              <option value="de-resume.html">🇩🇪 Deutsch</option>
+              <option value="es-resume.html">🇪🇸 Español</option>
+              <option value="fr-resume.html">🇫🇷 Français</option>
+              <option value="it-resume.html">🇮🇹 Italiano</option>
+              <option value="ru-resume.html">🇷🇺 Русский</option>
+              <option value="cn-resume.html">🇨🇳 中文</option>
+              <option value="jp-resume.html">🇯🇵 日本語</option>
+              <option value="kr-resume.html">🇰🇷 한국어</option>
             </select>
           </span>
         </span>
