--- a/en-activities.html
+++ b/en-activities.html
@@ -272,8 +272,7 @@
             <p>____</p>
             <li><a href="#contact"><span style="color: rgb(253, 93, 7);">Contact</span></a></li>
             <p>____</p>
-            <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
-          <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
+
             <p></p>
             <span id="greetings" style="display: none; color: rgb(92, 91, 90); font-weight: bold;"></span>
 
@@ -305,17 +304,17 @@
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="en-activities.html" select>English</option>
-            <option value="de.html">Deutsch</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
+            <option value="de-activities.html">Deutsch</option>
+            <option value="es-activities.html">Español</option>
+            <option value="fr-activities.html">Français</option>
             <!---
            
-            <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
+            <option value="it-activities.html">Italiano</option>
+            <option value="ru-activities.html">Русский</option>
             <option value="cn-activities.html">中文</option>
             <option value="jp-activities.html">日本語</option>
             <option value="kr-activities.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ar-activities.html">اللغة العربية</option>
             --->
           </select>
         </span>
@@ -382,17 +381,17 @@
               style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
               <option value="en-activities.html" select>🇬🇧 English</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
+              <option value="de-activities.html">🇩🇪 Deutsch</option>
+              <option value="es-activities.html">🇪🇸 Español</option>
+              <option value="fr-activities.html">🇫🇷 Français</option>
               <!---
               
-              <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
+              <option value="it-activities.html">🇮🇹 Italiano</option>
+              <option value="ru-activities.html">🇷🇺 Русский</option>
               <option value="cn-activities.html">🇨🇳 中文</option>
               <option value="jp-activities.html">🇯🇵 日本語</option>
               <option value="kr-activities.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-activities.html">🇸🇦 اللغة العربية</option>
               --->
             </select>
           </span>
