--- a/es.html
+++ b/es.html
@@ -289,32 +289,20 @@
             <span style="display: block; height: 6px;"></span>
             <li><a href="#"> <span class='blue'>Investigador</span> :: <span class='blue'>Ingeniero</span> :: <span
                   class='blue'>Analista</span></a></li>
-            <p>____</p>
-            <!--<li><a href="#whoami">¿Quién soy?</a></li>-->
-            <li><a href="#educación">Educación</a></li>
-            <!--<li><a href="#trabajo">Trabajo</a></li>-->
-            <!--<li><a href="#proyecto">Proyectos</a></li>-->
-            <!--<li><a href="#activities">Actividades</a></li> -->
-            <li><a href="#posts">Publicaciones</a></li>
-            <!--<li><a href="#patents">Patentes</a></li>-->
-            <!--<li><a href="#presentaciones">Conferencias</a></li>-->
-            <li><a href="#awards">Premios</a></li>
-            <!--<li><a href="#entrenamiento">Entrenamiento</a></li>-->
-            <!--<li><a href="#fund">Financiación</a></li>-->
-            <!--<li><a href="#skills">Habilidades</a></li>-->
-            <li><a href="#contacto">Contacto</a></li>
-            <p>____</p>
-            <!-- <li><a href="#services">Services</a></li> -->
-            <!-- <li><a href="#contact">Contact</a></li> -->
-            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                  class='blue'>LinkedIn</span></a></li>
-            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                target="_blank"><span class='blue'>Google Académico</span></a></li>
-            <!--<li><a href="https://unknown/files/Hong_XU_CV_github.io.pdf" target="_blank" target="_blank"><span class='blue'>CV</span></a></li>-->
-            <!-- <li><a href="http://www.linkedin.com/in/" target="_blank" target="_blank"><span class='blue'>LinkedIn Profile</span></a></li> -->
-            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
+                  <p>____</p>
+                  <li><a href="es.html"><span style="color: rgb(253, 93, 7);">Biografía ⏴</span></a></li>
+                  <li><a href="es-research.html">Investigación</a></li>
+                  <li><a href="es-resume.html">Résumé</a></li>
+                  <li><a href="es-activities.html">Actividades</a></li>
+                  <li><a href="#contact">Contacto</a></li>
+                  <p>____</p>
+                  <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
+                    class='blue'>LinkedIn</span></a></li>
+                  <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
+                  target="_blank"><span class='blue'>Google Scholar</span></a></li>
+                  <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
                   tum.de</span></a></li>
-            <p>____</p>
+                  <p>____</p>
             <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
           <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
             <p></p>
