--- a/fr-1p.html
+++ b/fr-1p.html
@@ -301,20 +301,34 @@
             <span style="display: block; height: 6px;"></span>
             <li><a href="#"> <span class='blue'>Chercheur</span> :: <span class='blue'>Ingénieur</span> :: <span
                   class='blue'>Analyste</span></a></li>
-                  <p>____</p>
-                  <li><a href="fr.html"><span style="color: rgb(253, 93, 7);">Biographie ⏴</span></a></li>
-                  <li><a href="fr-research.html">Recherche</a></li>
-                  <li><a href="fr-resume.html">Résumé</a></li>
-                  <li><a href="fr-activities.html">Activités</a></li>
-                  <li><a href="#contact">Contact</a></li>
-                  <p>____</p>
-                  <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
+            <p>____</p>
+            <!--<li><a href="#whoami">Who am I?</a></li>-->
+            <li><a href="#education">Éducation</a></li>
+            <!--<li><a href="#work">Travailler</a></li>-->
+            <!--<li><a href="#project">Projets</a></li>-->
+            <!--<li><a href="#activities">Activités</a></li> -->
+            <li><a href="#publications">Publications</a></li>
+            <!--<li><a href="#patents">Brevets</a></li>-->
+            <!--<li><a href="#presentations">Conférences</a></li>-->
+            <li><a href="#awards">Récompenses</a></li>
+            <!--<li><a href="#training">Formation</a></li>-->
+            <!--<li><a href="#fund">Financement</a></li>-->
+            <!--<li><a href="#skills">Compétences</a></li>-->
+            <li><a href="#contact">Contact</a></li>
+            <p>____</p>
+            <!-- <li><a href="#services">Services</a></li> -->
+            <!-- <li><a href="#contact">Contact</a></li> -->
+            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                   class='blue'>LinkedIn</span></a></li>
-                  <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                  target="_blank"><span class='blue'>Google Scholar</span></a></li>
-                  <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
+            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
+                target="_blank"><span class='blue'>Google Scholar</span></a></li>
+            <!--<li><a href="https://unknown/files/Hong_XU_CV_github.io.pdf" target="_blank" target="_blank"><span class='blue'>CV</span></a></li>-->
+            <!-- <li><a href="http://www.linkedin.com/in/" target="_blank" target="_blank"><span class='blue'>LinkedIn Profile</span></a></li> -->
+            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
                   tum.de</span></a></li>
-                  <p>____</p>
+            <p>____</p>
+            <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
+          <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
             <p></p>
             <img src="images/logo.png" width="45" />
 
