--- a/it.html
+++ b/it.html
@@ -296,34 +296,20 @@
             <span style="display: block; height: 6px;"></span>
             <li><a href="#"> <span class='blue'>Ricercatore</span> :: <span class='blue'>Ingegnere</span> :: <span
                   class='blue'>Analista</span></a></li>
-            <p>____</p>
-            <!--<li><a href="#whoami">Who am I?</a></li>-->
-            <li><a href="#education">Educazione</a></li>
-            <!--<li><a href="#work">Viaggiatore</a></li>-->
-            <!--<li><a href="#project">Progetti</a></li>-->
-            <!--<li><a href="#activities">Attività</a></li> -->
-            <li><a href="#publications">Pubblicazioni</a></li>
-            <!--<li><a href="#patents">Brevetti</a></li>-->
-            <!--<li><a href="#presentations">Conferenze</a></li>-->
-            <li><a href="#awards">Ricompense</a></li>
-            <!--<li><a href="#training">Formazione</a></li>-->
-            <!--<li><a href="#fund">Finanza</a></li>-->
-            <!--<li><a href="#skills">Competenze</a></li>-->
-            <li><a href="#contact">Contatta</a></li>
-            <p>____</p>
-            <!-- <li><a href="#services">Services</a></li> -->
-            <!-- <li><a href="#contact">Contact</a></li> -->
-            <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
+                  <p>____</p>
+                  <li><a href="it.html"><span style="color: rgb(253, 93, 7);">Biografia ⏴</span></a></li>
+                  <li><a href="it-research.html">Ricerca</a></li>
+                  <li><a href="it-resume.html">Riassunto</a></li>
+                  <li><a href="it-activities.html">Attività</a></li>
+                  <li><a href="#contact">Contatta</a></li>
+                  <p>____</p>
+                  <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
                   class='blue'>LinkedIn</span></a></li>
-            <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"
-                target="_blank"><span class='blue'>Google Scholar</span></a></li>
-            <!--<li><a href="https://unknown/files/Hong_XU_CV_github.io.pdf" target="_blank" target="_blank"><span class='blue'>CV</span></a></li>-->
-            <!-- <li><a href="http://www.linkedin.com/in/" target="_blank" target="_blank"><span class='blue'>LinkedIn Profile</span></a></li> -->
-            <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
+                  <li><a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=it" target="_blank"
+                  target="_blank"><span class='blue'>Google Scholar</span></a></li>
+                  <li><a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu [at]
                   tum.de</span></a></li>
-            <p>____</p>
-            <!--<li><a href="index.html" target="_self">EN</a> | <a href="cn.html" target="_self">中文</br> 
-          <a href="de.html" target="_self">DE</a> | <a href="fr.html" target="_self">FR</a></li>-->
+                  <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
 
