--- a/kr-research.html
+++ b/kr-research.html
@@ -353,13 +353,13 @@
             <option value="kr-research.html" select>한국어</option>
             <option value="jp-research.html">日本語</option>
             <option value="cn-research.html">中文</option>
-            <option value="de.html">Deutsch</option>
+            <option value="de-research.html">Deutsch</option>
             <option value="en-research.html">English</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
-            <option value="it.html">Italiano</option>
+            <option value="es-research.html">Español</option>
+            <option value="fr-research.html">Français</option>
+            <option value="it-research.html">Italiano</option>
             <option value="ru-research.html">Русский</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ar-research.html">اللغة العربية</option>
 
 
           </select>
@@ -429,13 +429,13 @@
               <option value="kr-research.html" select>🇰🇷 한국어</option>
               <option value="jp-research.html">🇯🇵 日本語</option>
               <option value="cn-research.html">🇨🇳 中文</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
+              <option value="de-research.html">🇩🇪 Deutsch</option>
               <option value="en-research.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
+              <option value="es-research.html">🇪🇸 Español</option>
+              <option value="fr-research.html">🇫🇷 Français</option>
+              <option value="it-research.html">🇮🇹 Italiano</option>
               <option value="ru-research.html">🇷🇺 Русский</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-research.html">🇸🇦 اللغة العربية</option>
 
 
 
