--- a/ru-activities.html
+++ b/ru-activities.html
@@ -322,15 +322,15 @@
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="ru-activities.html" select>Русский</option>
-            <option value="de.html">Deutsch</option>
+            <option value="de-activities.html">Deutsch</option>
             <option value="en-activities.html">English</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
-            <option value="it.html">Italiano</option>
+            <option value="es-activities.html">Español</option>
+            <option value="fr-activities.html">Français</option>
+            <option value="it-activities.html">Italiano</option>
             <option value="cn-activities.html">中文</option>
             <option value="jp-activities.html">日本語</option>
             <option value="kr-activities.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ar-activities.html">اللغة العربية</option>
           </select>
         </span>
       </h3>
@@ -396,15 +396,15 @@
               style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
               <option value="ru-activities.html" select>🇷🇺 Русский</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
+              <option value="de-activities.html">🇩🇪 Deutsch</option>
               <option value="en-activities.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
+              <option value="es-activities.html">🇪🇸 Español</option>
+              <option value="fr-activities.html">🇫🇷 Français</option>
+              <option value="it-activities.html">🇮🇹 Italiano</option>
               <option value="cn-activities.html">🇨🇳 中文</option>
               <option value="jp-activities.html">🇯🇵 日本語</option>
               <option value="kr-activities.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-activities.html">🇸🇦 اللغة العربية</option>
             </select>
           </span>
         </span>
