--- a/ru-research.html
+++ b/ru-research.html
@@ -321,15 +321,15 @@
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="ru-research.html" select>Русский</option>
-            <option value="de.html">Deutsch</option>
+            <option value="de-research.html">Deutsch</option>
             <option value="en-research.html">English</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
-            <option value="it.html">Italiano</option>
+            <option value="es-research.html">Español</option>
+            <option value="fr-research.html">Français</option>
+            <option value="it-research.html">Italiano</option>
             <option value="cn-research.html">中文</option>
             <option value="jp-research.html">日本語</option>
             <option value="kr-research.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ar-research.html">اللغة العربية</option>
           </select>
         </span>
       </h3>
@@ -395,15 +395,15 @@
               style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
               <option value="ru-research.html" select>🇷🇺 Русский</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
+              <option value="de-research.html">🇩🇪 Deutsch</option>
               <option value="en-research.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
+              <option value="es-research.html">🇪🇸 Español</option>
+              <option value="fr-research.html">🇫🇷 Français</option>
+              <option value="it-research.html">🇮🇹 Italiano</option>
               <option value="cn-research.html">🇨🇳 中文</option>
               <option value="jp-research.html">🇯🇵 日本語</option>
               <option value="kr-research.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ar-research.html">🇸🇦 اللغة العربية</option>
             </select>
           </span>
         </span>
