--- a/ru-resume.html
+++ b/ru-resume.html
@@ -321,15 +321,15 @@
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="ru-resume.html" select>Русский</option>
-            <option value="de.html">Deutsch</option>
+            <option value="de-resume.html">Deutsch</option>
             <option value="en-resume.html">English</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
-            <option value="it.html">Italiano</option>
+            <option value="es-resume.html">Español</option>
+            <option value="fr-resume.html">Français</option>
+            <option value="it-resume.html">Italiano</option>
             <option value="cn-resume.html">中文</option>
             <option value="jp-resume.html">日本語</option>
             <option value="kr-resume.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ar-resume.html">اللغة العربية</option>
           </select>
         </span>
       </h3>
@@ -394,16 +394,16 @@
             <select id="languages" name="languages"
               style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="ru.html" select>🇷🇺 Русский</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
-              <option value="en.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ru-resume.html" select>🇷🇺 Русский</option>
+              <option value="de-resume.html">🇩🇪 Deutsch</option>
+              <option value="en-resume.html">🇬🇧 English</option>
+              <option value="es-resume.html">🇪🇸 Español</option>
+              <option value="fr-resume.html">🇫🇷 Français</option>
+              <option value="it-resume.html">🇮🇹 Italiano</option>
+              <option value="cn-resume.html">🇨🇳 中文</option>
+              <option value="jp-resume.html">🇯🇵 日本語</option>
+              <option value="kr-resume.html">🇰🇷 한국어</option>
+              <option value="ar-resume.html">🇸🇦 اللغة العربية</option>
             </select>
           </span>
         </span>
