--- a/fr-research.html
+++ b/fr-research.html
@@ -307,8 +307,8 @@
                   <li><a href="#publications">&nbsp;• Publications</a></li>
                   <li><a href="#patents">&nbsp;• Brevets</a></li>
                   <li><a href="#presentations">&nbsp;• Conférences</a></li>
-                  <li><a href="#equity-research">&nbsp;• Recherche sur les actions</a></li>
-                  <li><a href="fr-resume.html">CV</a></li>
+                  <li><a href="#equity-research">&nbsp;• Recherche d'actions</a></li>
+                  <li><a href="fr-resume.html">Résumé</a></li>
                   <li><a href="fr-activities.html">Activités</a></li>
                   <p>____</p>
                   <li><a href="#contact"><span style="couleur : rgb(253, 93, 7);">Contact</span></a></li>
