--- a/cn-activities.html
+++ b/cn-activities.html
@@ -361,7 +361,7 @@
       <p class="hidden-mobile"></p>
       <!--<h3 class="hidden-mobile"><ruby>简<rt><text style="color:rgb(255, 255, 255)">かん</text></rt></ruby> <ruby>介<rt><text style="color:rgb(255, 255, 255)">かい</text> </rt></ruby>-->
       <h3 class="hidden-mobile">
-        <span><ruby>演讲 & 主持<rt><text style="color:rgb(255, 255, 255)">Hi，Nǐ Hǎo！</text></rt></ruby> <ruby>
+        <span><ruby>兴趣爱好<rt><text style="color:rgb(255, 255, 255)">Hi，Nǐ Hǎo！</text></rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text></rt>
           </ruby> <small><small><small></small></small></small>
 
@@ -491,13 +491,21 @@
         </span>
       </p>
       <div>
-        <hr class="display-mobile" style="width:113%">
 
-        <h3 class="display-mobile">演讲 & 主持 <br></h3>
         <p align="justify">
+          一个不会做饭的博士生不是一个好摄影师！穿越四季，跨越山海，烟火人间，唯有美食与爱不可辜负。
+        </p>
 
+        <hr class="display-mobile" style="width:113%">
+        <hr class="hidden-mobile">
+
+
+
+        <p align="justify">
+        <h3>演讲 & 主持 <br></h3>
+        <p>
           <strong>▸ 联合国波恩气候变化大会</strong> 分会场主持人/演讲者《中国能源转型与技术创新》(全球直播)
-
+        </p>
 
         <div class="video-container hidden-mobile">
           <video controls poster="images/Bonn_preview_cn.png">
